# AV_DATA_HACK_2026_AGENTS

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: streamlit_app.py
config/obot/: docker-compose.yml
docs/: 01_architecture.md  02_deepeval_guide.md  03_obot_gateway_guide.md  04_demo_runbook.md
evals/: _harness.py  goldens.py  layer1_e2e_eval.py  layer2_component_eval.py  shadow_eval.py
mcp_servers/: _common.py  activities_server.py  booking_server.py  flights_server.py  hotels_server.py  run_all.py
mcp_servers/data/: activities.json  airlines.json  hotels.json
scripts/: run_agent.py  run_api.ps1  run_app.ps1  run_evals.ps1  run_mcp_servers.ps1
server/: __init__.py  app.py  evals_api.py  flow.py
slides/: Dr. Aditya Bhattacharya_new .pptx
src/trip_planner/: __init__.py  config.py  graph.py  llm.py  mcp_client.py  metrics.py  observability.py  prompts.py  state.py  tracing_langfuse.py  usage.py
src/trip_planner/agents/: __init__.py  base.py  nodes.py
web/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/evals/: page.tsx
web/components/: AgentActivity.tsx  Chat.tsx  EvalStudio.tsx  FlowDiagram.tsx  Markdown.tsx  TopNav.tsx  TripDetails.tsx  UsageMeter.tsx  icons.tsx
