[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "av-data-hack-2026-agents"
version = "0.1.0"
description = "Trip-planner agentic demo (LangGraph + MCP) instrumented with DeepEval & Obot - 'Keeping Eyes on Your Agents', AV Data Hack Summit 2026"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aditya Bhattacharya" }]

# Pinned loosely here; the canonical list is requirements.txt.
dependencies = [
  "langgraph>=0.2.50",
  "langchain>=0.3.7",
  "langchain-openai>=0.2.8",
  "langchain-mcp-adapters>=0.1.0",
  "mcp>=1.4.0",
  "openai>=1.55.0",
  "deepeval>=2.0.0",
  "streamlit>=1.39.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]
